<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="br.com.findfer.findfer.MainActivity">

    <item
        android:id="@+id/action_login"
        android:orderInCategory="100"
        android:title="@string/ac_login"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_new_user"
        android:orderInCategory="100"
        android:title="@string/ac_new_user"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/ac_logout"
        app:showAsAction="never" />
</menu>
