<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.findfer.findfer.RecordTwoActivity"
    android:orientation="vertical"
    android:layout_marginTop="40dp"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:layout_marginBottom="40dp">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_launcher_findfer"
        android:layout_gravity="center"/>
    <View
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_next_step"
        android:textSize="20dp"
        android:layout_gravity="center"/>
    <View
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="20dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_final_instruction"
        android:textSize="14dp"
        android:layout_gravity="center"/>
    <View
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="20dp"/>

    <ProgressBar
        android:visibility="gone"
        android:layout_gravity="center"
        android:id="@+id/pb_load_record"
        android:layout_width="60dp"
        android:layout_height="60dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_number_fone"
        android:layout_gravity="center"
        android:textSize="16dp"
        />
    <EditText
        android:id="@+id/et_fone"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:hint="@string/ed_hiint_number_fone"
        android:inputType="phone"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <Button
        android:id="@+id/bt_back"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_gravity="left"
        android:layout_weight="1"
        android:text="@string/bt_record_fone_back"
        android:onClick="backRecord"/>
        <Button
            android:id="@+id/bt_finish"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:text="@string/bt_record_fone_finish"
            android:onClick="finishRecord"/>
    </LinearLayout>
    <View
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="20dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_terms_information"
        android:textSize="14dp"
        android:layout_gravity="center"/>

</LinearLayout>

