<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:layout_marginTop="40dp"
    android:layout_marginBottom="40dp"
    android:background="@color/white"
    tools:context="br.com.findfer.findfer.RecordOneActivity">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_launcher_findfer"
        android:layout_gravity="center"/>
    <View
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="20dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_well_come"
        android:textSize="20dp"
        android:layout_gravity="center"/>
    <View
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="20dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_initial_instruction"
        android:textSize="14dp"
        android:layout_gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        />

    <View
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="20dp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="23dp"
            android:text="@string/tv_first_name"
            android:layout_weight="1"
            android:textSize="16dp"
            android:layout_marginLeft="10dp"
            />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="22dp"
            android:text="@string/tv_last_name"
            android:layout_weight="1"
            android:textSize="16dp"
            android:layout_marginRight="10dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/et_first_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/et_hint_first_name"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            />
        <EditText
            android:id="@+id/et_last_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/et_hint_last_name"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            />
    </LinearLayout>
    <View
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="20dp"/>
    <Button
        android:id="@+id/bt_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bt_record_name_next"
        android:layout_gravity="right"
        android:onClick="nextActivityFone"
        android:textColor="@color/colorPrimaryDark"
        android:background="@color/colorAccent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        />
</LinearLayout>