<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fresco="http://schemas.android.com/tools"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.findfer.findfer.ProfileActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">
            <ProgressBar
                android:id="@+id/pb_load_profile"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:visibility="gone"
                android:layout_gravity="center"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <com.facebook.drawee.view.SimpleDraweeView
                android:id="@+id/img_profile"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                fresco:placeholderImage="@drawable/banana"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"

                />
                <ImageButton
                    android:id="@+id/imb_update_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="15pt"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:src="@mipmap/ic_camera_party_mode"
                    android:background="@color/colorAccent"
                    android:onClick="updateImage"/>
            </RelativeLayout>
            <TextView
                android:id="@+id/tv_name_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/img_profile_poster"
                android:text="@string/tv_name_user"
                android:layout_marginTop="5dp"
                android:textSize="10pt"
                />
            <TextView
                android:id="@+id/tv_market_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_market_name"
                android:layout_alignParentLeft="true"
                android:layout_alignParentBottom="true"
                android:textSize="10pt"/>
            <TextView
                android:id="@+id/tv_date_poster"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_date"
                android:textSize="6pt"
                android:layout_marginTop="5dp"
                />
            <TextView
                android:id="@+id/tv_type_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_type_account"
                android:textSize="6pt"
                android:layout_marginTop="5dp"
                />
            <TextView
                android:id="@+id/tv_cod_usesr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cod_user"
                android:textSize="6pt"
                android:layout_marginTop="5dp"
                />
            <TextView
                android:id="@+id/tv_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="6pt"
                android:layout_marginTop="5dp"
                />
            <TextView
                android:id="@+id/tv_fone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fone"
                android:textSize="6pt"
                android:layout_marginTop="5dp"
                />
            <TextView
                android:id="@+id/tv_local"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/local"
                android:textSize="6pt"
                android:layout_marginTop="5dp"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_local_latitude"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/latitude"
                android:textSize="6pt"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                />
            <TextView
                android:id="@+id/tv_local_longitude"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/longitude"
                android:textSize="6pt"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                />
            </LinearLayout>
            <RatingBar
                android:id="@+id/rtb_qualification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:numStars="5"
                android:stepSize="1"
                android:visibility="gone"
                android:rating="0"/>


        </LinearLayout>
    </ScrollView>

</LinearLayout>

