<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context="br.com.findfer.findfer.NewPoster"
    >
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_launcher_findfer"
        android:layout_gravity="center"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_create_poster"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                />
            <View
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="10dp"/>
            <EditText
                android:id="@+id/et_titulo_new_poster"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:layout_gravity="center"
                android:ems="10"
                android:hint="@string/title_new_poster"
                android:inputType="textPersonName"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                />

            <EditText
                android:id="@+id/et_new_description"
                android:layout_width="match_parent"
                android:layout_height="77dp"
                android:layout_gravity="center"
                android:ems="10"
                android:hint="@string/new_description"
                android:inputType="textMultiLine"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"/>

            <EditText
                android:id="@+id/et_new_value"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:layout_gravity="center"
                android:ems="10"
                android:hint="@string/new_value"
                android:inputType="numberDecimal"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"/>

            <TextView
                android:id="@+id/tv_new_coupon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/new_coupon"
                android:textSize="17dp"
                android:textStyle="bold"
                android:visibility="gone"
                />

            <RadioGroup
                android:id="@+id/rg_new_coupon"
                android:layout_width="match_parent"
                android:layout_height="66dp"
                android:layout_marginTop="26dp"
                android:orientation="horizontal"
                android:visibility="gone"
                >

                <RadioButton
                    android:id="@+id/rb_yes"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="false"
                    android:text="@string/rb_yes" />

                <RadioButton
                    android:id="@+id/rb_no"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="false"
                    android:text="@string/rb_no" />
            </RadioGroup>

            <EditText
                android:id="@+id/et_coupon_value"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:layout_marginTop="30dp"
                android:ems="10"
                android:hint="@string/desc_value"
                android:inputType="numberDecimal"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_set_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="30dp"
                    android:layout_marginTop="30dp"
                    android:text="@string/sugest_set_image"
                    android:textSize="16dp"
                    android:textStyle="bold"

                    app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

                <ImageView
                    android:id="@+id/imgview_product"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="gone"/>

                <ImageButton
                    android:id="@+id/ib_camera"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:onClick="newImagePost"
                    app:srcCompat="@mipmap/camera"
                    android:background="@color/white"/>
            </LinearLayout>

            <Button
                android:id="@+id/bt_new_post"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@color/colorAccent"
                android:fontFamily="Arial"
                android:onClick="creatPoster"
                android:text="@string/creat_poster"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="92dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"/>

            <ProgressBar
                android:id="@+id/pb_load_new_poster"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:visibility="gone" />

        </LinearLayout>
    </ScrollView>


</LinearLayout>