<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="br.com.findfer.findfer.NewUser">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_market"
            android:visibility="visible"/>
        <Spinner
            android:id="@+id/combo_market"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawSelectorOnTop="true"
            android:visibility="visible"
            />

    <EditText
        android:id="@+id/et_new_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/et_new_email"
        android:inputType="textAutoComplete"/>





    <Button
        android:id="@+id/bt_new_user"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/bt_new_user"
        android:layout_gravity="center"
        android:onClick="newUser"/>
    </LinearLayout>
    </ScrollView>
</LinearLayout>
